Add graphic generation
