# src/main/resources/openapi/graphontext.yaml
@@ -5,7 +5,7 @@ info:
   version: 1.0.0
 
 servers:
-  - url: 'https://localhost:8080'
+  - url: "https://localhost:8080"
 
 tags:
   - name: auth
@@ -24,7 +24,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/AuthCredentials'
+              $ref: "#/components/schemas/AuthCredentials"
       responses:
         200:
           description: Authentication response
@@ -38,11 +38,11 @@ paths:
                     description: Authentication token
                     type: string
         400:
-          $ref: '#/components/responses/Error'
+          $ref: "#/components/responses/Error"
         422:
-          $ref: '#/components/responses/Error'
+          $ref: "#/components/responses/Error"
         500:
-          $ref: '#/components/responses/Error'
+          $ref: "#/components/responses/Error"
   /auth/register:
     post:
       operationId: register
@@ -54,7 +54,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/AuthCredentials'
+              $ref: "#/components/schemas/AuthCredentials"
       responses:
         200:
           description: Authentication response
@@ -68,11 +68,11 @@ paths:
                     description: Authentication token
                     type: string
         400:
-          $ref: '#/components/responses/Error'
+          $ref: "#/components/responses/Error"
         422:
-          $ref: '#/components/responses/Error'
+          $ref: "#/components/responses/Error"
         500:
-          $ref: '#/components/responses/Error'
+          $ref: "#/components/responses/Error"
   /shops:
     get:
       operationId: getShops
@@ -89,15 +89,15 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/Shop'
+                  $ref: "#/components/schemas/Shop"
         401:
-          $ref: '#/components/responses/Error'
+          $ref: "#/components/responses/Error"
         400:
-          $ref: '#/components/responses/Error'
+          $ref: "#/components/responses/Error"
         422:
-          $ref: '#/components/responses/Error'
+          $ref: "#/components/responses/Error"
         500:
-          $ref: '#/components/responses/Error'
+          $ref: "#/components/responses/Error"
     post:
       operationId: createShop
       summary: Create a shop
@@ -106,22 +106,22 @@ paths:
       security:
         - bearerAuth: [ ]
       requestBody:
-        $ref: '#/components/requestBodies/CreateShop'
+        $ref: "#/components/requestBodies/CreateShop"
       responses:
         200:
           description: Shop response
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Shop'
+                $ref: "#/components/schemas/Shop"
         401:
-          $ref: '#/components/responses/Error'
+          $ref: "#/components/responses/Error"
         400:
-          $ref: '#/components/responses/Error'
+          $ref: "#/components/responses/Error"
         422:
-          $ref: '#/components/responses/Error'
+          $ref: "#/components/responses/Error"
         500:
-          $ref: '#/components/responses/Error'
+          $ref: "#/components/responses/Error"
   /shops/{shopId}:
     delete:
       operationId: deleteShop
@@ -131,18 +131,18 @@ paths:
       security:
         - bearerAuth: [ ]
       parameters:
-        - $ref: '#/components/parameters/ShopId'
+        - $ref: "#/components/parameters/ShopId"
       responses:
         200:
           description: Successfully deleted a shop
         401:
-          $ref: '#/components/responses/Error'
+          $ref: "#/components/responses/Error"
         400:
-          $ref: '#/components/responses/Error'
+          $ref: "#/components/responses/Error"
         422:
-          $ref: '#/components/responses/Error'
+          $ref: "#/components/responses/Error"
         500:
-          $ref: '#/components/responses/Error'
+          $ref: "#/components/responses/Error"
     patch:
       operationId: updateShop
       summary: Update a shop
@@ -151,24 +151,24 @@ paths:
       security:
         - bearerAuth: [ ]
       parameters:
-        - $ref: '#/components/parameters/ShopId'
+        - $ref: "#/components/parameters/ShopId"
       requestBody:
-        $ref: '#/components/requestBodies/UpdateShop'
+        $ref: "#/components/requestBodies/UpdateShop"
       responses:
         200:
           description: Shop response
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Shop'
+                $ref: "#/components/schemas/Shop"
         401:
-          $ref: '#/components/responses/Error'
+          $ref: "#/components/responses/Error"
         400:
-          $ref: '#/components/responses/Error'
+          $ref: "#/components/responses/Error"
         422:
-          $ref: '#/components/responses/Error'
+          $ref: "#/components/responses/Error"
         500:
-          $ref: '#/components/responses/Error'
+          $ref: "#/components/responses/Error"
   /shops/{shopId}/products:
     get:
       operationId: getProducts
@@ -178,7 +178,7 @@ paths:
       security:
         - bearerAuth: [ ]
       parameters:
-        - $ref: '#/components/parameters/ShopId'
+        - $ref: "#/components/parameters/ShopId"
       responses:
         200:
           description: Products response
@@ -187,15 +187,15 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/Product'
+                  $ref: "#/components/schemas/Product"
         401:
-          $ref: '#/components/responses/Error'
+          $ref: "#/components/responses/Error"
         400:
-          $ref: '#/components/responses/Error'
+          $ref: "#/components/responses/Error"
         422:
-          $ref: '#/components/responses/Error'
+          $ref: "#/components/responses/Error"
         500:
-          $ref: '#/components/responses/Error'
+          $ref: "#/components/responses/Error"
   /shops/{shopId}/products/sync:
     get:
       operationId: syncProducts
@@ -205,7 +205,7 @@ paths:
       security:
         - bearerAuth: [ ]
       parameters:
-        - $ref: '#/components/parameters/ShopId'
+        - $ref: "#/components/parameters/ShopId"
       responses:
         200:
           description: Products response
@@ -214,15 +214,15 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/Product'
+                  $ref: "#/components/schemas/Product"
         401:
-          $ref: '#/components/responses/Error'
+          $ref: "#/components/responses/Error"
         400:
-          $ref: '#/components/responses/Error'
+          $ref: "#/components/responses/Error"
         422:
-          $ref: '#/components/responses/Error'
+          $ref: "#/components/responses/Error"
         500:
-          $ref: '#/components/responses/Error'
+          $ref: "#/components/responses/Error"
   /shops/{shopId}/products/{productId}/visualizations:
     get:
       operationId: getProductVisualizations
@@ -232,8 +232,8 @@ paths:
       security:
         - bearerAuth: [ ]
       parameters:
-        - $ref: '#/components/parameters/ShopId'
-        - $ref: '#/components/parameters/ProductId'
+        - $ref: "#/components/parameters/ShopId"
+        - $ref: "#/components/parameters/ProductId"
       responses:
         200:
           description: Product visualizations response
@@ -242,15 +242,15 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/ProductVisualization'
+                  $ref: "#/components/schemas/ProductVisualization"
         401:
-          $ref: '#/components/responses/Error'
+          $ref: "#/components/responses/Error"
         400:
-          $ref: '#/components/responses/Error'
+          $ref: "#/components/responses/Error"
         422:
-          $ref: '#/components/responses/Error'
+          $ref: "#/components/responses/Error"
         500:
-          $ref: '#/components/responses/Error'
+          $ref: "#/components/responses/Error"
     post:
       operationId: createProductVisualization
       description: Create product visualization
@@ -259,10 +259,46 @@ paths:
       security:
         - bearerAuth: [ ]
       parameters:
-        - $ref: '#/components/parameters/ShopId'
-        - $ref: '#/components/parameters/ProductId'
+        - $ref: "#/components/parameters/ShopId"
+        - $ref: "#/components/parameters/ProductId"
       requestBody:
-        $ref: '#/components/requestBodies/CreateProductVisualization'
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                - format
+                - filters
+              properties:
+                format:
+                  type: string
+                  description: Visualization format
+                filters:
+                  type: object
+                  description: Visualization filters
+                  properties:
+                    categories:
+                      type: array
+                      description: Categories to filter by (quality, description, delivery, package)
+                      items:
+                        type: string
+                        enum: [ quality, description, delivery, package ]
+                    rating:
+                      type: array
+                      description: Ratings to filter by (values from 0 to 5)
+                      items:
+                        type: integer
+                        minimum: 0
+                        maximum: 5
+                    date_range:
+                      type: string
+                      description: Date range for filtering data
+                      enum: [ week, month, half_year, year, all ]
+                    mood:
+                      type: string
+                      description: Mood filter for reviews
+                      enum: [ positive, negative ]
       responses:
         200:
           description: Product visualization image
@@ -272,13 +308,13 @@ paths:
                 type: string
                 format: binary
         401:
-          $ref: '#/components/responses/Error'
+          $ref: "#/components/responses/Error"
         400:
-          $ref: '#/components/responses/Error'
+          $ref: "#/components/responses/Error"
         422:
-          $ref: '#/components/responses/Error'
+          $ref: "#/components/responses/Error"
         500:
-          $ref: '#/components/responses/Error'
+          $ref: "#/components/responses/Error"
   /shops/{shopId}/products/{productId}/visualizations/{productVisualizationId}:
     get:
       operationId: getProductVisualization
@@ -288,9 +324,9 @@ paths:
       security:
         - bearerAuth: [ ]
       parameters:
-        - $ref: '#/components/parameters/ShopId'
-        - $ref: '#/components/parameters/ProductId'
-        - $ref: '#/components/parameters/ProductVisualizationId'
+        - $ref: "#/components/parameters/ShopId"
+        - $ref: "#/components/parameters/ProductId"
+        - $ref: "#/components/parameters/ProductVisualizationId"
       responses:
         200:
           description: Product visualization image
@@ -300,13 +336,13 @@ paths:
                 type: string
                 format: binary
         401:
-          $ref: '#/components/responses/Error'
+          $ref: "#/components/responses/Error"
         400:
-          $ref: '#/components/responses/Error'
+          $ref: "#/components/responses/Error"
         422:
-          $ref: '#/components/responses/Error'
+          $ref: "#/components/responses/Error"
         500:
-          $ref: '#/components/responses/Error'
+          $ref: "#/components/responses/Error"
 
 components:
   parameters:
